[package]
name = "HyperRUSTY"
version = "0.1.0"
edition = "2024"

[dependencies]
z3 = "0.13.0"
ir = { path = "./ir" }
llvm = { path = "./llvm" }
parser = { path = "./parser" }
encoder = { path = "./encoder" }
enchelper = { path = "./enchelper" }
hqb_verilog = { path = "./verilog" }
parser_nusmv = { path = "./parser_nusmv" }
unroller_qbf = { path = "./unroller_qbf" }
loop_conditions = { path = "./loop_conditions" }
clap = { version = "4.5.40", features = ["cargo"] }
