[package]
name = "unroller_qbf"
version = "0.1.0"
edition = "2021"

[dependencies]
z3 = "0.13"
regex = "1"
ir = { path = "../ir" }
expressions = { path = "../expressions" }
parser_nusmv = { path = "../parser_nusmv" }
fsm = { path = "../fsm" }
flags = { path = "../flags" }
logging = { path = "../logging" }
